...
                            .accessibilityLabel(Text(flightStatusString))
                        Text(showingPlaceholders ? "N/A" : (balloonPositionService.currentRadioChannel?.probeType ?? "N/A"))
                            .frame(minWidth: 60, alignment: .center)
                            .lineLimit(1)
                            .multilineTextAlignment(.center)
                        Text(showingPlaceholders ? "N/A" : (balloonPositionService.currentPositionData?.sondeName ?? "N/A"))
                            .accessibilityIdentifier("panel.serial")
                            .frame(minWidth: 100, maxWidth: .infinity, alignment: .center)
                            .lineLimit(1)
                            .multilineTextAlignment(.center)
                        Text(showingPlaceholders ? "N/A" : (balloonPositionService.currentPositionData != nil ? "\(Int(balloonPositionService.currentPositionData!.altitude)) m" : "N/A"))
                            .frame(minWidth: 80, maxWidth: .infinity, alignment: .center)
                            .lineLimit(1)
...
